===================================================
[B]ZattooHiQ v1.6.9.6 [/B]17.03.2019 Steffen Rolapp
===================================================
- Fehler bei Salt.Tv behoben

===================================================
[B]ZattooHiQ v1.6.9.5 [/B]15.03.2019 Steffen Rolapp
===================================================
- url von vorschaubild geändert

==================================================
[B]ZattooHiQ v1.6.9 [/B]17.02.2019 Steffen Rolapp
==================================================
- Kodi Player OSD über Longpress Return zu erreichen
- WidgetProblem bei Aeon Silvo behoben
- EPG Datums Eingabe exit wenn heute
- Settings können im Hauptmenu angezeigt werden
- Aufnahmen nur wenn im Abo
- 1und1 als Reseller hinzugefügt
- EPG überarbeitet

==================================================
[B]ZattooHiQ v1.6.8 [/B]23.09.2018 Steffen Rolapp
==================================================
- Fehler in der Suche ist behoben
- Salt.tv als Reseller eingefügt
- default für Aufnahme Format eingefügt
- Das laden der Programminfos im Hintergrund überarbeitet
- Option Anzeige Livebild im EPG hinzugefügt

==================================================
[B]ZattooHiQ v1.6.7.1 [/B]15.07.2018 Steffen Rolapp
==================================================
- diverse Bugfixes
- sortiefunktion für Aufnahmen

==================================================
[B]ZattooHiQ v1.6.5 [/B]24.04.2018 Steffen Rolapp
==================================================
- login auf v2 umgestellt
- Programminfo auf v2 umgestellt

==================================================
[B]ZattooHiQ v1.6.3 [/B]24.04.2018 Steffen Rolapp
==================================================
- Ja/Nein Abfrage Aufnahme löschen
- keymap.py überarbeitet
- Serienaufnahme löschen wird nur noch angezeigt wenn verfügbar
- User-Agent geändert

==================================================
[B]ZattooHiQ v1.6.2 [/B]08.04.2018 Steffen Rolapp